--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="main">
         <header>
-            <a href="#"> <img src="./images/logo.png" class="logo" alt="logo"></a>
+            <a href="#"> <img src="logo.png" class="logo" alt="logo"></a>
             <ul class="navigation">
                 <li><a href="#">Top Features</a></li>
                 <li><a href="#">Gallery</a></li>
@@ -24,7 +24,7 @@
         <div class="content">
             <h2>Ready to <span>Race</span></h2>
             <a href="#" class="btn">Ride Now</a>
-            <img src="./images/bike.png" alt="bike" class="bike">
+            <img src="bike.png" alt="bike" class="bike">
         </div>
 
         <!-- Slider Content -->
